src/objects/Dropdown__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>List of dropdown values used with custom built functionality</description>
    <fields>
        <fullName>Category__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Value__c</fullName>
        <description>The display value used in the dropdown. This value is what the user sees</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The display value used in the dropdown. This value is what the user sees</inlineHelpText>
        <label>Display Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Value__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Parent Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <description>If part of a list, like the Top FAQs, the sort order of where it appears in that list</description>
        <inlineHelpText>If part of a list, like the Top FAQs, the sort order of where it appears in that list</inlineHelpText>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>The value used in the dropdown. This is the value that is actually saved with the form.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The value used in the dropdown. This is the value that is actually saved with the form.</inlineHelpText>
        <label>Dropdown Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Dropdown</label>
</CustomObject>